# remote_motor

./: .gitignore  README.md  Tasks.txt  build.sh
client/: Cargo.toml  config.json
client/src/: input_monitor.rs  main.rs  message_sender.rs  motor_constatnts.rs  motor_message_constatnts.rs
front_end/: index.html  run.sh  setup_streaming.sh  start_cams.sh  startup_notes.txt  streaming.html
front_end/robotarm-frontend/: README.md  angular.json  crontab  deploy.sh  deploy.sh_old  karma.conf.js  package-lock.json  package.json  recycle_cams.sh  run.sh  run.sh_old
front_end/robotarm-frontend/e2e/src/: app.e2e-spec.ts
front_end/robotarm-frontend/src/: index.html  polyfills.ts  recycle_cams.sh  styles.css
front_end/robotarm-frontend/src/app/: app.component.css  app.module.ts
models/: Cargo.toml
models/src/: lib.rs
server/: Cargo.toml  config.json
server/.cargo/: config
server/src/: .main.rs.swp  controller_master.rs  float_comparison.rs  main.rs  message_receiver.rs  motor_controller.rs  scoreboard_runner.rs  scoreboard_service.rs
services/: Cargo.toml
services/src/: config_reader.rs
webapi/: Cargo.toml  Rocket.toml  run.sh
webapi/src/: main.rs
webapi/src/controllers/: command_controller.rs  debug_controller.rs  mod.rs  user_controller.rs
webapi/src/models/: command_models.rs  controller_models.rs  mod.rs  user_models.rs
webapi/src/services/: command_aggregator.rs  command_processor.rs  command_sender.rs  factory.rs  goal_listener.rs  mod.rs  motor_message_creator.rs  user_service.rs  websocket_service.rs
(+37 files in other folders)
