[package]
name = "webapi"
version = "0.1.0"
authors = ["Adrian Schiller <E075608@mcgladrey.rsm.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = {path = "../models"}
rocket = "0.4.6"
rocket_contrib = "0.4.6"
rocket_cors = "0.5.1"
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0"
bincode = "1.3.1"
uuid = {version = "0.8", features =["v4"]}
chrono = "0.4"
# slog = "2.7.0"
# slog-async = "2.6.0"
# slog-term = "2.6.0"
log = "0.4.14"
ws = "0.9.1"